--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.17.4",
+    "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
+    "mcp-handler": "^1.0.1",
+    "next": "15.5.0",
+    "penpal": "^7.0.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.0"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@biomejs/biome": "2.2.0",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
-    "@biomejs/biome": "2.2.0"
+    "typescript": "^5"
   }
 }
